--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+<!-- Contenedor requerido por Leaflet / app -->
+<div id="map" style="height:100vh; width:100%;"></div>
+<!-- Raíz opcional para UI inyectada -->
+<div id="ui-root"></div>
   <!-- Tu HTML de la aplicación (no lo reescribo; app.v6.js lo inyecta) -->
 
   <!-- URL remota de MOV (Google Sheets CSV) -->
